bugfix/adminPage table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,33 @@
 {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true
+    },
+    "editor.wordWrap": "on",
+    "window.openFilesInNewWindow": "on",
+    "editor.tabSize": 2,
+    "editor.minimap.showSlider": "always",
+    "workbench.editor.showTabs": true,
+    "eslint.format.enable": true,
     "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "terminal.integrated.defaultProfile.windows": "Git Bash",
+    "emmet.showSuggestionsAsSnippets": true,
+    "editor.snippetSuggestions": "top",
+    "emmet.includeLanguages": {
+        "javascript": "javascriptreact",
+        "razor": "html",
+        "plaintext": "pug"
+    },
+    "workbench.iconTheme": "material-icon-theme",
+    "liveshare.connectionMode": "relay",
+    "bracketPairColorizer.depreciation-notice": false,
+    "typescript.updateImportsOnFileMove.enabled": "always",
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "scm.inputFontSize": 15,
+    "debug.console.fontSize": 15,
+    "markdown.preview.fontSize": 15,
+    "terminal.integrated.fontSize": 15,
+    "editor.fontSize": 13
 }
