--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-highlight-words": "^0.20.0",
+        "react-input-emoji": "^5.6.5",
         "react-paypal-button-v2": "^2.6.3",
         "react-query": "^3.39.3",
         "react-redux": "^8.1.2",
@@ -31,6 +32,7 @@
         "sass": "^1.64.2",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.0.7",
+        "timeago.js": "^4.0.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
