--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "antd": "^5.8.2",
         "axios": "^1.4.0",
         "classnames": "^2.3.2",
+        "dayjs": "^1.11.10",
         "dotenv": "^16.3.1",
         "env-cmd": "^10.1.0",
         "jwt-decode": "^3.1.2",
