--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "jwt-decode": "^3.1.2",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-countup": "^6.5.0",
         "react-dom": "^18.2.0",
         "react-highlight-words": "^0.20.0",
         "react-input-emoji": "^5.6.5",
@@ -28,6 +29,7 @@
         "react-router-dom": "^6.14.2",
         "react-scripts": "^5.0.1",
         "react-slick": "^0.29.0",
+        "recharts": "^2.10.3",
         "redux-persist": "^6.0.0",
         "sass": "^1.64.2",
         "slick-carousel": "^1.8.1",
