--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:3000
+REACT_APP_API_URL=https://shop-ecommerce-be.onrender.com
 REACT_APP_SOCKET_URL=http://localhost:8800
 GENERATE_SOURCEMAP=false
