--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# REACT_APP_API_URL=https://shop-ecommerce-be.onrender.com
+# REACT_APP_SOCKET_URL=http://localhost:8800
+
 REACT_APP_API_URL=https://shop-ecommerce-be.onrender.com
-REACT_APP_SOCKET_URL=http://localhost:8800
+REACT_APP_SOCKET_URL=https://shop-ecommerce-be.onrender.com
 GENERATE_SOURCEMAP=false
